<?xml version="1.0"?>
<package>
  <name>path_contour</name>
  <version>0.0.0</version>
  <description>Path to trajectory</description>
  <author>Leo Campos</author>
  <maintainer email="leobardo.e.campos.macias@intel.com">Leo Campos</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
  
</package>
