<?xml version="1.0"?>
<package>
  <name>rrt_lib</name>
  <version>0.1.0</version>
  <description>
   An RRT library
  </description>
  <author>Leo Campos</author>
  <maintainer email="leobardo.e.campos.macias@intel.com">Leo Campos</maintainer>
  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake module -->
  <build_depend>roscpp</build_depend>
  <build_depend>rlmap</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rlmap</run_depend>
 
</package>
